@@ -40,6 +40,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'conflicts' => array(
 		),
 		'suggests' => array(
+			'rgfolderselector' => '0.0.3-',
 		),
 	),
 	'_md5_values_when_last_written' => 'a:40:{s:9:"ChangeLog";s:4:"1ffa";s:10:"README.txt";s:4:"9fa9";s:12:"ext_icon.gif";s:4:"0522";s:17:"ext_localconf.php";s:4:"0e4f";s:14:"ext_tables.php";s:4:"94f7";s:14:"ext_tables.sql";s:4:"451a";s:13:"locallang.xml";s:4:"ea1c";s:16:"locallang_db.xml";s:4:"255b";s:14:"doc/manual.sxw";s:4:"6f6b";s:14:"pi1/ce_wiz.gif";s:4:"02b6";s:29:"pi1/class.tx_filelist_pi1.php";s:4:"fdbe";s:37:"pi1/class.tx_filelist_pi1_wizicon.php";s:4:"48b3";s:13:"pi1/clear.gif";s:4:"cc11";s:17:"pi1/locallang.xml";s:4:"2ce0";s:17:"pi1/icons/doc.png";s:4:"3996";s:18:"pi1/icons/down.gif";s:4:"0297";s:18:"pi1/icons/draw.png";s:4:"47dc";s:19:"pi1/icons/flash.png";s:4:"35cd";s:20:"pi1/icons/folder.png";s:4:"4f81";s:27:"pi1/icons/folder_denied.png";s:4:"c2d3";s:18:"pi1/icons/html.png";s:4:"1577";s:19:"pi1/icons/image.png";s:4:"5f73";s:18:"pi1/icons/mime.png";s:4:"b0c2";s:25:"pi1/icons/mime_denied.png";s:4:"d7aa";s:21:"pi1/icons/move_up.png";s:4:"ae9b";s:17:"pi1/icons/neu.png";s:4:"ab0b";s:17:"pi1/icons/new.png";s:4:"b085";s:22:"pi1/icons/password.png";s:4:"59fb";s:17:"pi1/icons/pdf.png";s:4:"fb48";s:21:"pi1/icons/pdf_old.png";s:4:"7377";s:17:"pi1/icons/pps.png";s:4:"bf4b";s:20:"pi1/icons/reload.png";s:4:"fc7c";s:19:"pi1/icons/sound.png";s:4:"92f6";s:20:"pi1/icons/source.png";s:4:"6a30";s:17:"pi1/icons/tar.png";s:4:"e97d";s:17:"pi1/icons/txt.png";s:4:"9088";s:16:"pi1/icons/up.gif";s:4:"e951";s:19:"pi1/icons/video.png";s:4:"e014";s:17:"pi1/icons/xls.png";s:4:"bd47";s:24:"pi1/static/editorcfg.txt";s:4:"5385";}',
