@@ -1,6 +1,10 @@
+2009-12-28  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed bug #1019: Integrate EXT:rgfolderselector
+
 2008-08-05  Moreno Feltscher  <moreno@luagsh.ch>
 
-	* Fixed Bug #1218: No DBAL compatibility
+	* Fixed bug #1218: No DBAL compatibility
 
 2008-08-04  Moreno Feltscher  <moreno@luagsh.ch>
 
